--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.11",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
         "silber/bouncer": "^1.0",
