Add Google OAuth configuration to .env.example
- Added GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET, and GOOGLE_REDIRECT_URI to .env.example for Google authentication setup.
- Ensures proper configuration for social login integration with Google.

--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,11 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:8000/auth/github/callback
 
+
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
+
 VITE_APP_NAME="${APP_NAME}"
 
 
